Update 14th Oct, 2022 - Average.html

--- a/14th Oct, 2022 - Average.html
+++ b/14th Oct, 2022 - Average.html
@@ -6,10 +6,12 @@
 
 <body>
 <script type="text/javascript">
-  // alert("Hello World");
-  // console.log("My name is Ade Edwin");
+  alert("Hello World");
+  console.log("My name is Ade Edwin");
+  
   // my matric number is 19CJ025758 i.e. it ends with 8
-
+  
+  
   //Calculating the Average of 8 Numbers
   var arrayOfNumbers = [0,1,2,3,4,5,6,7], sum=0;
   for (var i = 0; i<arrayOfNumbers.length; i++){
