Updated index.html file to log the array elements

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     sum += arrayOfNumbers[i]
   }
   var average = sum/arrayOfNumbers.length
+  console.log(arrayOfNumbers);
   console.log(average);
 </script>
 </body>
