--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-
+<!-- Open this page at: https://undilut-ed.github.io/cen414AverageClasswork -->
 <head>
   <title></title>
 </head>
 
 <body>
+  <div>Welcome to my page</div>
 <script type="text/javascript">
   alert("Hello World");
   console.log("My name is Ade Edwin");
